<resources>
    <string name="app_name">eFridge</string>
    <string name="produkty">Produkty</string>
    <string name="przepisy">Przepisy</string>
    <string name="historia">Historia</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="header">Twoja kieszonkowa lodówka</string>
    <string name="nazwa">Nazwa</string>
    <string name="ilosc">Ilość</string>
    <string name="typ">Typ</string>
    <string name="usun">Usuń</string>
    <string name="start">Start</string>
    <string name="settings">Ustawienia</string>
    <string name="search">Szukaj</string>
    <string name="newProduct">Dodaj nowy produkt:</string>
    <string name="editProduct">Edytuj produkt:</string>
    <string name="productName">Nazwa produktu: </string>
    <string name="productMuch">Ilość: </string>
    <string name="productRecipes">Przepisy wykorzystujące produkt:</string>
    <string name="save">Zapisz</string>
    <string name="edit">Edytuj</string>
    <string name="changePhoto">Zmień obraz</string>
    <string name="time">Czas przygotowania:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="types">
        <item>Kilogramy</item>
        <item>Litry</item>
        <item>Sztuki</item>
        <item>Gramy</item>
        <item>Mililitry</item>
    </string-array>


    <string name="paruwa">Oczyszczone z włókien i błon mięso z szynki, musi być dokładnie umyte i osuszone. Następnie kroimy mięso w kostkę o wymiarach ok. 2 cm. Peklujemy je solą i peklosolą a następnie odstawiamy do lodówki na 24 godziny. Po upływie doby wyjmujemy mięso z lodówki i mielimy na sitku 2mm dwa lub trzy razy. Następnie blendujemy wszystko z dodatkiem wody i przypraw do uzyskania gładkiej masy.
    UWAGA! Ważne jest aby nie przegrzać mięsa. Podczas mielenia a zwłaszcza blendowania mięso nabiera temperatury. Masa musi mieć temperaturę maksymalną 10 stopni. Po peklowaniu mięsa umieszczam je w zamrażarce na co najmniej dwie godziny. To pozwala uniknąć przegrzania.
    Gdy już mamy przygotowaną masę, napełniamy jelita odkręcając w odcinki ok 20-25 cm.
    W celu osadzenia, parówki wieszamy na kijach na 1 godzinę w temperaturze pokojowej. Wędzimy y w temperaturze 30 -40 ˚C przez 1-2 h, do uzyskania jasnej barwy. Uwędzone parówki parzymy przez 10-15 min. w temperaturze 70-72˚C, a następnie po sparzeniu studzimy w zimnej wodzie. Po tym rozwieszamy na kijach w celu osuszenia.
    </string>

    <string name="intro">Witaj w eFridge!</string>

    <string name="intro2">Aplikacja została stworzona dla osób lubiących gotować (i nie tylko), by ułatwić i uprzyjemnić zabawę w kuchni.</string>

    <string name="intro3">Z jej pomocą można z łatwością sporządzić mobilny spis produktów spożywczych, oraz monitorować czynności podczas gotowania.</string>

    <string name="intro4">Dodawaj produkty w ikonce wózka sklepowego.
        Korzystaj z przepisów oraz czasomierzy dostępnych w każdym z nich. </string>

</resources>
